force-app/main/default/objects/Activity/fields/AM_Categoria_de_Negocio_1__c.field-meta.xml
<CustomField>
    <fullName>AM_Categoria_de_Negocio_1__c</fullName>
    <label>Categoría de Negocio</label>
    <length>3</length>
    <type>Text</type>
</CustomField>