force-app/main/default/objects/Activity/fields/AM_Contacto_traer_telefono_Lighting__c.field-meta.xml
<CustomField>
    <fullName>AM_Contacto_traer_telefono_Lighting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto traer telefono Lighting</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>