force-app/main/default/objects/Activity/fields/AM_Correo_electronicoL__c.field-meta.xml
<CustomField>
    <fullName>AM_Correo_electronicoL__c</fullName>
    <label>Correo electronico</label>
    <length>200</length>
    <type>Text</type>
</CustomField>