force-app/main/default/objects/Activity/fields/AM_Modelo_de_interesL__c.field-meta.xml
<CustomField>
    <fullName>AM_Modelo_de_interesL__c</fullName>
    <formula>AM_Traer_informacion_Cotizaci_n__r.AM_Modelo_de_interes__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo de interes</label>
    <type>Text</type>
</CustomField>