force-app/main/default/objects/Activity/fields/AM_Otro_TelefonoL__c.field-meta.xml
<CustomField>
    <fullName>AM_Otro_TelefonoL__c</fullName>
    <label>Otro Telefono</label>
    <length>200</length>
    <type>Text</type>
</CustomField>