force-app/main/default/objects/Activity/fields/AM_Telefono_Light__c.field-meta.xml
<CustomField>
    <fullName>AM_Telefono_Light__c</fullName>
    <label>Telefono</label>
    <length>200</length>
    <type>Text</type>
</CustomField>