force-app/main/default/objects/Activity/fields/AM_Traer_informacion_Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>AM_Traer_informacion_Cotizaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traer informacion Cotización</description>
    <inlineHelpText>Traer informacion Cotización</inlineHelpText>
    <label>Traer informacion Cotización</label>
    <referenceTo>AM_Oportunidad__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>