force-app/main/default/objects/Activity/fields/AM_Vitrina_Actividad__c.field-meta.xml
<CustomField>
    <fullName>AM_Vitrina_Actividad__c</fullName>
    <formula>TEXT(Owner:User.AM_Agencia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>