force-app/main/default/objects/Activity/fields/By_pass_validacion_de_reglas_completado__c.field-meta.xml
<CustomField>
    <fullName>By_pass_validacion_de_reglas_completado__c</fullName>
    <label>By pass validacion de reglas completado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>