force-app/main/default/objects/Activity/fields/Categoria_de_atraso__c.field-meta.xml
<CustomField>
    <fullName>Categoria_de_atraso__c</fullName>
    <formula>IF(AND(TEXT(Status)=&quot;Completada&quot;), &quot;SIN RETRASO&quot;,
IF(AND(TODAY()-ActivityDate &lt;= 0 ), &quot;SIN RETRASO&quot;,
IF(AND(TODAY()-ActivityDate &gt; 0 ,TODAY()-ActivityDate &lt;= 30), &quot;30 Dias&quot;,
IF(AND(TODAY()-ActivityDate &gt;= 31 ,TODAY()-ActivityDate &lt;= 60), &quot;60 Dias&quot;,
IF(AND(TODAY()-ActivityDate &gt;= 61 ,TODAY()-ActivityDate &lt;= 90), &quot;90 Dias&quot;,&quot;Mas de 90 dias&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de atraso</label>
    <type>Text</type>
</CustomField>