force-app/main/default/objects/Activity/fields/Categoria_Oportunidad_NegocioL__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Oportunidad_NegocioL__c</fullName>
    <formula>TEXT(AM_Traer_informacion_Cotizaci_n__r.AM_Etapa__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria Oportunidad Negocio</label>
    <type>Text</type>
</CustomField>