force-app/main/default/objects/Activity/fields/Contacto_Gerenciamiento_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Gerenciamiento_Clientes__c</fullName>
    <label>Contacto Gerenciamiento Clientes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>