force-app/main/default/objects/Activity/fields/Dias_de_atraso_motos__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_atraso_motos__c</fullName>
    <formula>IF(
 TEXT(Status)  =  &quot;Programada&quot;,

TODAY()-ActivityDate,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de atraso motos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>