force-app/main/default/objects/Activity/fields/Etapa_de_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Etapa_de_Asignacion__c</fullName>
    <description>Campo flag oculto que se utiliza en el flow de automatizaciones para determinar cuál etapa de la oportunidad generó esta tarea.</description>
    <label>Etapa de Asignación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>