force-app/main/default/objects/Activity/fields/Etapa_de_Oportunidad_del__c.field-meta.xml
<CustomField>
    <fullName>Etapa_de_Oportunidad_del__c</fullName>
    <label>Etapa de Oportunidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>