force-app/main/default/objects/Activity/fields/Fecha_de_cierre_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cierre_de_oportunidad__c</fullName>
    <label>Fecha de cierre de oportunidad</label>
    <type>Date</type>
</CustomField>