force-app/main/default/objects/Activity/fields/Fecha_de_Completacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Completacion__c</fullName>
    <label>Completado el</label>
    <type>Date</type>
</CustomField>