force-app/main/default/objects/Activity/fields/Fecha_de_creacion_tarea__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion_tarea__c</fullName>
    <label>Fecha de creacion tarea</label>
    <type>DateTime</type>
</CustomField>