force-app/main/default/objects/Activity/fields/Fecha_de_proximo_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_proximo_seguimiento__c</fullName>
    <label>Fecha de proximo seguimiento</label>
    <type>Date</type>
</CustomField>