force-app/main/default/objects/Activity/fields/MC_Documento_propietario_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>MC_Documento_propietario_vehiculo__c</fullName>
    <formula>AM_Busqueda_cuenta__r.RM_Cuenta_Relacionada__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento cuenta relacionada</label>
    <type>Text</type>
</CustomField>