force-app/main/default/objects/Activity/fields/MC_Nombre_propietario_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>MC_Nombre_propietario_vehiculo__c</fullName>
    <formula>IF(ISBLANK(AM_Traer_informacion_Cotizaci_n__r.AM_Propietario_motocicleta__r.Name),
 AM_Traer_informacion_Cotizaci_n__r.AM_Propietario_motocicleta__r.FirstName &amp;&quot; &quot;&amp; 
 AM_Traer_informacion_Cotizaci_n__r.AM_Propietario_motocicleta__r.LastName,
 AM_Traer_informacion_Cotizaci_n__r.AM_Propietario_motocicleta__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre propietario vehiculo</label>
    <type>Text</type>
</CustomField>