force-app/main/default/objects/Activity/fields/MC_VitrinaRen__c.field-meta.xml
<CustomField>
    <fullName>MC_VitrinaRen__c</fullName>
    <formula>TEXT(AM_Traer_informacion_Cotizaci_n__r.AM_Vitrina_2_Renting__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vitrina.</label>
    <type>Text</type>
</CustomField>