force-app/main/default/objects/Activity/fields/Motivo_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Cierre__c</fullName>
    <label>Motivo de Cierre</label>
    <type>TextArea</type>
</CustomField>