force-app/main/default/objects/Activity/fields/Motocicleta__c.field-meta.xml
<CustomField>
    <fullName>Motocicleta__c</fullName>
    <label>Motocicleta</label>
    <type>Phone</type>
</CustomField>