force-app/main/default/objects/Activity/fields/Propietario_de_la_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Propietario_de_la_cotizacion__c</fullName>
    <formula>AM_Traer_informacion_Cotizaci_n__r.Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario de la cotizacion</label>
    <type>Text</type>
</CustomField>