force-app/main/default/objects/Activity/fields/SO_Cargo_de_creador__c.field-meta.xml
<CustomField>
    <fullName>SO_Cargo_de_creador__c</fullName>
    <formula>CreatedBy.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo de creador</label>
    <type>Text</type>
</CustomField>