force-app/main/default/objects/Activity/fields/SO_documento_contacto_principal__c.field-meta.xml
<CustomField>
    <fullName>SO_documento_contacto_principal__c</fullName>
    <formula>AM_Busqueda_cuenta__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento contacto principal</label>
    <type>Text</type>
</CustomField>