force-app/main/default/objects/Activity/fields/SO_Nombre_contacto_principal__c.field-meta.xml
<CustomField>
    <fullName>SO_Nombre_contacto_principal__c</fullName>
    <formula>IF(ISBLANK(  AM_Traer_informacion_Cotizaci_n__r.AM_Usuario_motocicleta__r.Name), 
AM_Traer_informacion_Cotizaci_n__r.AM_Usuario_motocicleta__r.FirstName  &amp; &quot; &quot; &amp; AM_Traer_informacion_Cotizaci_n__r.AM_Usuario_motocicleta__r.LastName, AM_Traer_informacion_Cotizaci_n__r.AM_Usuario_motocicleta__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre contacto principal</label>
    <type>Text</type>
</CustomField>