force-app/main/default/objects/Activity/fields/SO_Tipo_de_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>SO_Tipo_de_cotizacion__c</fullName>
    <formula>TEXT(AM_Traer_informacion_Cotizaci_n__r.AM_Tipo_de_cotizacion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cotizacion</label>
    <type>Text</type>
</CustomField>