force-app/main/default/objects/Activity/fields/UserFilter__c.field-meta.xml
<CustomField>
    <fullName>UserFilter__c</fullName>
    <formula>IF( Owner:User.Id =  $User.Id ,1 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserFilter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>