force-app/main/default/objects/Activity/fields/Vehiculo_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo_de_interes__c</fullName>
    <label>Vehículo de interés</label>
    <length>100</length>
    <type>Text</type>
</CustomField>