force-app/main/default/objects/Activity/fields/Vencida__c.field-meta.xml
<CustomField>
    <fullName>Vencida__c</fullName>
    <formula>ActivityDate  &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencida</label>
    <type>Checkbox</type>
</CustomField>