force-app/main/default/objects/Activity/listViews/HOY.listView-meta.xml
<ListView>
    <fullName>HOY</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EVENT.END_DATE_TIME</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>HOY</label>
</ListView>